# TextToDigits

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  Parser.cpp  Parser.hpp  TextToDigitsConverter.cpp  TextToDigitsConverter.hpp  TextToDigitsConverterContext.hpp  Token.cpp  Token.hpp  main.cpp
Test/: CMakeLists.txt  TestDataSet.txt  TextToDigitsConverter.hpp  main.cpp
